--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-simple-image-viewer": "^1.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
