--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hugeicons/core-free-icons": "^1.0.13",
+    "@hugeicons/react": "^1.0.5",
     "@tanstack/react-query": "^4.36.1",
     "@vercel/blob": "^0.27.3",
     "framer-motion": "^12.6.2",
