--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@hugeicons/core-free-icons": "^1.0.13",
     "@hugeicons/react": "^1.0.5",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tanstack/react-query": "^4.36.1",
     "@vercel/blob": "^0.27.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
+    "lucide-react": "^0.486.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-simple-image-viewer": "^1.2.2"
+    "react-simple-image-viewer": "^1.2.2",
+    "tailwind-merge": "^3.0.2",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
